<resources>
    <!-- global -->
    <string name="app_name">Vertretungsplan</string>

    <!-- main activity -->
    <string name="main_activity_title">Vertretungsplan</string>
    <string name="main_buttonSettings">Einstellungen</string>
    <string name="main_buttonAllClasses">Alle</string>
    <string name="main_buttonPause">Pause</string>
    <string name="main_noContentText">Heute ist keine Ankündigungen vorhanden</string>
    <string name="main_errorText">Leider gab es einen technischen Fehler. Bitte versuche es später nochmal und prüfe ob die Zugangsdaten korrekt sind.</string>
    <string name="main_newsOfTheDay">Info des Tages anzeigen</string>

    <!-- settings activity -->
    <string name="settings_activity_title">Einstellungen</string>
    <string name="settings_credentialsTitle">Zugangsdaten</string>
    <string name="settings_gradeTitle">Mein Filter</string>
    <string name="settings_nutzername">Nutzername</string>
    <string name="settings_passwort">Passwort</string>
    <string name="settings_saveButton">Speichern</string>
    <string name="settings_aboutButton">Über diese App</string>

    <!-- about activity -->
    <string name="about_title">Über diese App</string>
    <string name="about_text1">Die App wird privat und ohne Unterstützung der Schule entwickelt.</string>
    <string name="about_text2">Es werden keinerlei persönliche Daten gesammelt.</string>
    <string name="about_text3">Da nur wenige Testgeräte zur Verfügung stehen, kann nicht garantiert werden, dass die Darstellung auf allen Displays einwandfrei funktioniert. Vor allem für Tablets gibt es derzeit noch kein eigenes Layout.</string>
    <string name="about_text4">Für Fragen, Anregungen, Wünschen und Hilfestellungen bei Problemen kannst du gerne eine Nachricht senden. Bei Darstellungsfehlern denke bitte an einen aussagekräftigen Screenshot im Anhang.</string>
    <string name="about_mailButton">E-Mail senden</string>

    <!-- welcome activity -->
    <string name="welcome_text1">Hallo!</string>
    <string name="welcome_text2">Mit dieser App kannst du den Vertretungsplan abrufen.</string>
    <string name="welcome_text3">Im nächsten Schritt wirst du nach den Zugangsdaten gefragt. Du kannst außerdem deine Klasse wählen.</string>
    <string name="welcome_button">Los geht\'s!</string>
</resources>