<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esgsubstitutionplanapp.AboutActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginBottom="20dp"
        tools:context="com.esgsubstitutionplanapp.SettingsActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headlineSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:gravity="center_horizontal"
            android:textSize="@dimen/textsize_headline"
            />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text1"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_marginTop="50dp"
            android:layout_below="@id/headlineSettings"
            />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text2"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_marginTop="50dp"
            android:layout_below="@id/headlineSettings"
            />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text3"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_marginTop="50dp"
            android:layout_below="@id/headlineSettings"
            />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text4"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_marginTop="50dp"
            android:layout_below="@id/headlineSettings"
            />

        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:padding="10dp"
            android:text="@string/about_mailButton"
            android:textColor="#fff"
            android:gravity="center"
            android:onClick="sendEmail"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/button"
            />


    </LinearLayout>
</ScrollView>