<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esgsubstitutionplanapp.SettingsActivity">

<RelativeLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginBottom="20dp"
    tools:context="com.esgsubstitutionplanapp.SettingsActivity"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/headlineSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_activity_title"
        android:gravity="center_horizontal"
        android:textSize="@dimen/textsize_headline"
        />

    <TextView
        android:id="@+id/credentialsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_credentialsTitle"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/headlineSettings"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/settings_nutzername"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:autofillHints="username"
        android:layout_below="@id/credentialsTitle"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/settings_passwort"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:autofillHints="password"
        android:layout_below="@+id/username"/>

    <TextView
        android:id="@+id/gradeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_gradeTitle"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/password"
        />

    <Spinner
        android:id="@+id/grade"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_below="@+id/gradeTitle"
        />

    <Spinner
        android:id="@+id/letter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/letters"
        android:layout_below="@+id/grade"
        android:gravity="center"/>

    <TextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:text="@string/settings_saveButton"
        android:textColor="#fff"
        android:layout_below="@+id/letter"
        android:gravity="center"
        android:onClick="saveData"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/save"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/info_icon"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startAbout"
            android:contentDescription="Über diese App" />

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:text="@string/settings_aboutButton"
            android:textColor="#aaa"
            android:gravity="center"
            android:onClick="startAbout"
            android:clickable="true"
            android:focusable="true"
            />
    </LinearLayout>

</RelativeLayout>
</ScrollView>